# SmartCollect_task

./: .dockerignore  .env  .env.django  .env.postgres  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Makefile  README.md  Ubuntu.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
SmartCollect_task/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
payouts/: admin.py  apps.py  exceptions.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
payouts/management/commands/: wait_for_db.py
