[tool.poetry]
name = "smartcollect-task"
version = "0.1.0"
description = "API for managing payout requests"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "SmartCollect_task" }]

# Основные зависимости (будут установлены в контейнере)
[tool.poetry.dependencies]
python = "^3.12"
django = ">=6.0.2,<7.0.0"
django-environ = ">=0.12.0,<0.13.0"
psycopg = {extras = ["binary"], version = ">=3.3.2,<4.0.0"}
celery = ">=5.6.2,<6.0.0"
redis = ">=7.1.0,<8.0.0"
drf-spectacular = ">=0.29.0,<0.30.0"

# Dev‑зависимости (не нужны в проде, но handy для локального теста)
[tool.poetry.dev-dependencies]
pylint = ">=4.0.4,<5.0.0"
pylint-django = ">=2.7.0,<3.0.0"
black = ">=26.1.0,<27.0.0"

# Стандартный build‑system (по‑умолчанию для Poetry)
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"